Fix loading spinner alignment.

--- a/packages/css/styles/spinner.scss
+++ b/packages/css/styles/spinner.scss
@@ -1,8 +1,3 @@
-.loading-spinner {
+.loading-spinner-row {
 	min-height: 100vh;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-right: -50%;
-	transform: translate(50%, 50%);
 }
